[gd_scene load_steps=27 format=3 uid="uid://cjtj0uvx0uuj0"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_rf48v"]
[ext_resource type="Texture2D" uid="uid://813gysn8scvl" path="res://Sprites/Characters/SpriteSheet.png" id="1_t4xj8"]
[ext_resource type="Script" path="res://Scripts/hurt_box.gd" id="3_buy7j"]
[ext_resource type="Script" path="res://Scripts/interact_detector.gd" id="4_umfqv"]
[ext_resource type="Texture2D" uid="uid://08q8jkl2spb6" path="res://Sprites/Arrow.png" id="5_2rco7"]
[ext_resource type="PackedScene" uid="uid://6gw71yswasbg" path="res://Scenes/Weapons/sword.tscn" id="6_xfdmo"]
[ext_resource type="Script" path="res://Scripts/State/state_machine.gd" id="7_xn3ng"]
[ext_resource type="Script" path="res://Scripts/State/Player/state_player_idle.gd" id="8_rgrkg"]
[ext_resource type="Script" path="res://Scripts/State/Player/state_player_walk.gd" id="9_qoxun"]
[ext_resource type="Script" path="res://Scripts/State/Player/state_player_attack.gd" id="10_42ia2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oadbt"]
size = Vector2(12, 8)

[sub_resource type="Animation" id="Animation_lrdc1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0944]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, -1)]
}

[sub_resource type="Animation" id="Animation_bjpyw"]
resource_name = "attack_down"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0944, 4.18879]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(6, -1), Vector2(0, 2), Vector2(-6, -1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 4)]
}

[sub_resource type="Animation" id="Animation_p7kcd"]
resource_name = "attack_left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3.66519, 5.58505]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-6, 1), Vector2(-8, -4), Vector2(-6, -9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 4)]
}

[sub_resource type="Animation" id="Animation_pj1o4"]
resource_name = "attack_right"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.523599, 2.61799]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(6, -9), Vector2(8, -4), Vector2(6, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(3, 4)]
}

[sub_resource type="Animation" id="Animation_xsg6a"]
resource_name = "attack_up"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.0472, 1.0472]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-6, -7), Vector2(0, -10), Vector2(6, -7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 4)]
}

[sub_resource type="Animation" id="Animation_w5qwd"]
resource_name = "move_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_mly0v"]
resource_name = "move_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_6yypf"]
resource_name = "move_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_lsjad"]
resource_name = "move_up"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y42yp"]
_data = {
"RESET": SubResource("Animation_lrdc1"),
"attack_down": SubResource("Animation_bjpyw"),
"attack_left": SubResource("Animation_p7kcd"),
"attack_right": SubResource("Animation_pj1o4"),
"attack_up": SubResource("Animation_xsg6a"),
"move_down": SubResource("Animation_w5qwd"),
"move_left": SubResource("Animation_mly0v"),
"move_right": SubResource("Animation_6yypf"),
"move_up": SubResource("Animation_lsjad")
}

[sub_resource type="Animation" id="Animation_r84l0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_dfddb"]
resource_name = "hurt_blink"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.588235), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_reyr7"]
_data = {
"RESET": SubResource("Animation_r84l0"),
"hurt_blink": SubResource("Animation_dfddb")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_frwyy"]
size = Vector2(14, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_f738q"]

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_rf48v")
move_speed = 3000

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
texture = ExtResource("1_t4xj8")
offset = Vector2(0, -8)
hframes = 4
vframes = 7

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
color = Color(1, 1, 1, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_oadbt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y42yp")
}

[node name="EffectPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_reyr7")
}

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("3_buy7j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_frwyy")
debug_color = Color(0.943336, 0.239239, 1.92523e-07, 0.42)

[node name="InteractBox" type="Area2D" parent="."]
script = ExtResource("4_umfqv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractBox"]
position = Vector2(0, -6)
scale = Vector2(1.2, 1.2)
shape = SubResource("CircleShape2D_f738q")
debug_color = Color(1.54018e-06, 0.637214, 0.394985, 0.42)

[node name="HurtTimer" type="Timer" parent="."]
one_shot = true

[node name="InteractMarker" type="Sprite2D" parent="."]
z_index = 10
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_2rco7")

[node name="Weapon" type="Node2D" parent="."]
position = Vector2(6, -1)
rotation = 2.0944

[node name="Sword" parent="Weapon" instance=ExtResource("6_xfdmo")]

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("7_xn3ng")

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource("8_rgrkg")

[node name="Walk" type="Node2D" parent="StateMachine"]
script = ExtResource("9_qoxun")

[node name="Attack" type="Node2D" parent="StateMachine"]
script = ExtResource("10_42ia2")

[connection signal="hit_by_attack" from="HurtBox" to="." method="_on_hurt_box_hit_by_attack"]
[connection signal="area_entered" from="InteractBox" to="InteractBox" method="_on_area_entered"]
[connection signal="area_exited" from="InteractBox" to="InteractBox" method="_on_area_exited"]
[connection signal="closest_changed" from="InteractBox" to="." method="_on_interact_box_closest_changed"]
