[gd_scene load_steps=16 format=3 uid="uid://cmss22mnd3up2"]

[ext_resource type="Texture2D" uid="uid://baxuyuf8n3ap0" path="res://Sprites/Characters/Slime.png" id="1_f5tgu"]
[ext_resource type="Script" path="res://Scripts/Enemies/slime.gd" id="1_wk0c8"]
[ext_resource type="Script" path="res://Scripts/hurt_box.gd" id="3_ab274"]
[ext_resource type="Script" path="res://Scripts/hit_box.gd" id="3_dy6t4"]
[ext_resource type="Texture2D" uid="uid://da8yru2x8p6nv" path="res://Sprites/Effects/SpriteSheet.png" id="5_krdgm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xyeh4"]
size = Vector2(12.0379, 9.02174)

[sub_resource type="Animation" id="Animation_4l5ox"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EffectSprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EffectSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2osk7"]
resource_name = "move_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_cugd8"]
resource_name = "move_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_ndps8"]
resource_name = "move_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_wdtn4"]
resource_name = "move_up"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="Animation" id="Animation_um7v3"]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EffectSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EffectSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ogpbd"]
_data = {
"RESET": SubResource("Animation_4l5ox"),
"death": SubResource("Animation_um7v3"),
"move_down": SubResource("Animation_2osk7"),
"move_left": SubResource("Animation_cugd8"),
"move_right": SubResource("Animation_ndps8"),
"move_up": SubResource("Animation_wdtn4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ldhl"]
size = Vector2(20.512, 7.95207)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_co7ri"]
size = Vector2(16, 10)

[node name="Slime" type="CharacterBody2D"]
light_mask = 2
visibility_layer = 2
z_index = 1
y_sort_enabled = true
script = ExtResource("1_wk0c8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.0251037, -5)
scale = Vector2(1.32497, 0.665061)
shape = SubResource("RectangleShape2D_xyeh4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_f5tgu")
hframes = 4
vframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ogpbd")
}

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 0
script = ExtResource("3_dy6t4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-2.23517e-08, -5.97574)
scale = Vector2(0.780031, 1.01213)
shape = SubResource("RectangleShape2D_4ldhl")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("3_ab274")
remember_areas = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_co7ri")

[node name="EffectSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -10)
texture = ExtResource("5_krdgm")
hframes = 6

[connection signal="hit_by_attack" from="HurtBox" to="." method="_on_hurt_box_hit_by_attack"]
